feat(security): FASE 1 - Critical security fixes (COMPLETE)
CRITICAL SECURITY IMPROVEMENTS:

1. PostgreSQL Database Security (CRITICAL FIX)
   - Disabled public network access (publicNetworkAccess: 'Disabled')
   - Configured VNet integration with delegated subnet
   - Removed firewall rule exposing 0.0.0.0
   - Database now only accessible via private network

2. Azure Key Vault Security (CRITICAL FIX)
   - Disabled public network access (publicNetworkAccess: 'Disabled')
   - Configured network ACLs (defaultAction: 'Deny')
   - Only Azure services can access via 'bypass: AzureServices'

3. Removed Hardcoded Credentials (CRITICAL FIX)
   - DELETED: scripts/auto-deploy-background.sh (had hardcoded passwords)
   - DELETED: scripts/wait-for-services.sh (had hardcoded passwords)
   - DELETED: scripts/deploy-local.ps1 (had hardcoded passwords)
   - Created .env.example template for secure credential management
   - Updated docker-compose.yml to use environment variables

4. Service Principal Least Privilege (CRITICAL FIX)
   - scripts/configure-secrets.sh: Changed from 'Contributor' at subscription level to specific roles at Resource Group level
   - Specific roles: Website Contributor, Web Plan Contributor, Key Vault Secrets User
   - scripts/regenerate_azure_creds.ps1:
     * Changed from 'contributor' to minimal roles
     * SECURITY FIX: Credentials now saved to file instead of printed to console
     * Added warnings about credential file handling

5. .gitignore Updates
   - Added .env* files to prevent accidental commit
   - Added azure_credentials_*.json pattern

BREAKING CHANGES:
- Docker Compose now REQUIRES .env file with POSTGRES_PASSWORD
- Service Principals need to be recreated with new minimal roles
- Database and Key Vault require VNet configuration for access

Files Changed:
- infrastructure/azure/modules/database.bicep (secured)
- infrastructure/azure/modules/keyvault.bicep (secured)
- scripts/configure-secrets.sh (reduced privileges)
- scripts/regenerat

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,9 @@ services:
     container_name: econeura-postgres
     restart: always
     environment:
-      POSTGRES_USER: econeura
-      POSTGRES_PASSWORD: econeurapassword
-      POSTGRES_DB: econeura
+      POSTGRES_USER: ${POSTGRES_USER:-econeura}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD must be set in .env file}
+      POSTGRES_DB: ${POSTGRES_DB:-econeura}
     ports:
       - "5432:5432"
     volumes:
